chore: add new endpoint to grade translation exercise
