# dto/agents/generate_translation_exercise.go
@@ -1,5 +1,0 @@
-package dto
-
-type GeneraterTranslationExerciseRequest struct {
-	LessonId int
-}
