# dto/exercise/generate_translation_exercise.go
@@ -1,0 +1,5 @@
+package dto
+
+type GenerateTranslationExerciseRequest struct {
+	LessonId int
+}
