# dto/exercise/grade_translation_exercise.go
@@ -1,0 +1,6 @@
+package dto
+
+type GradeTranslationExerciseRequest struct {
+	LessonId int
+	Sentence string
+}
